--- a/skin/froentend/css/style.css
+++ b/skin/froentend/css/style.css
@@ -393,7 +393,7 @@ input[type="file"] { opacity: 0; position: absolute;  height: 38px;}
 .lft_feed_img { width: 8%; float: left; margin-right: 20px; }
 .feed_name { width: 85%; float: left; }
 .feed_name h4, .feed_body_text h4 { font-size: 25px; color: #444444; font-family: 'proxima_novaregular'; margin-bottom: 8px; }
-.feed_name p { font-size: 18px; color: #afafaf; font-family: 'proxima_novasemibold'; margin-bottom: 0; }
+.feed_name p { font-size: 12px; color: #afafaf; font-family: 'proxima_novasemibold'; margin-bottom: 0; }
 .feed_body_text h4 { font-size: 22px; }
 .feed_body_text p { font-size: 16px; color: #666666; font-family: 'proxima_novaregular'; margin-bottom: 15px; }
 .feed_body_text { padding-bottom: 8px; margin-bottom: 8px; border-bottom: 1px solid #d9d9d9; }
